lox-tests/tests/string/unterminated.stderr
ERROR: Unterminated string literal
 --> 2:1
  |
2 | "this string has no close quote
  | ^-----------------------------^
